welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: Missing closing brace `}' assumed here
def faireV()
^PictureMono:4: error: expected class or object definition
{
^PictureMono:22: error: expected start of definition
override def run() {
         ^